style/table-types.css
.checkbox {
  background-color: transparent;
  border: none;
  content: url(./svgs/check_box.svg);
  width: 14px;
  height: 14px;
  padding: 0px;
}

.cell-checkbox {
  margin-top: 4px;
  opacity: 0.7;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.cell-checkbox:hover {
  opacity: 1;
  cursor: pointer;
}

.checked .checkbox {
  content: url(./svgs/checked_check_box.svg);
}

.all-labels-container {
  display: flex;
  gap: 10px;
  justify-content: flex-start;
  align-items: center;
  padding-bottom: 2px;

  position: relative;
  flex-wrap: wrap;
  overflow: hidden;
}

.add-label {
  cursor: pointer;
  border: 1px solid rgb(189, 189, 189);
  height: fit-content;
  width: fit-content;
  border-radius: 5px;
  background-color: transparent;
  padding: 1px;
  font-size: 20px;
  color: rgba(73, 73, 73, 0.7);

  margin-left: 3px;
  margin-top: 1px;
  margin-bottom: 1px;

  display: flex;
  align-items: center;
  justify-content: center;
}

.add-label:hover {
  transform: scale(1.05);
}

.add-label span {
  height: 15px;
  width: 15px;
  line-height: 15px;
}

.label-container {
  height: 18px;
  border-radius: 15px;
  padding: 2px 10px;
  width: fit-content;
  border: 1px solid rgb(189, 189, 189);
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.label-color {
  width: 10px;
  height: 10px;
  border-radius: 50%;
}

.label-title {
  color: rgba(73, 73, 73);
  font-size: 13px;
  word-break: keep-all;
  white-space: nowrap;
}

.remove-label {
  border: none;
  background-color: transparent;
  padding: 5px 0px 5px 10px;
  cursor: pointer;
  line-height: 10px;
  margin-bottom: 1px;
  color: rgba(73, 73, 73, 0.7);
}

.remove-label:hover {
  transform: scale(1.05);
}

.labels-chooser-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: fit-content;

  position: absolute;
  top: 30px;
  left: 20px;

  border-radius: 6px;
  background-color: white;

  z-index: 100;

  padding: 5px;
}

.labels-list {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 5px;

  width: 100%;
  max-height: 250px;

  overflow: auto;
  margin-top: 10px;
}

.label-option {
  height: 15px;
  width: fit-content;
  padding: 5px;

  display: flex;
  align-items: center;
  gap: 10px;

  cursor: pointer;
}

.label-option-checkbox {
  background-color: transparent;
  border: none;
  content: url(./svgs/check_box.svg);
  width: 14px;
  height: 14px;
  padding: 0px;
  opacity: 0.7;
}
.label-option-checkbox:hover {
  opacity: 1;
}

.label-option-checkbox.selected {
  content: url(./svgs/checked_check_box.svg);
}

.add-new-label {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: space-around;
  padding-left: 5px;
  padding-bottom: 5px;
  font-size: 13px;
  justify-content: flex-start;
  cursor: pointer;
}

.new-label-title,
.labels-chooser-container .label-title {
  width: 155px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.labels-chooser-container .label-title {
  width: 125px;
}

.labels-search {
  min-width: 200px;
  border-radius: 4px;
}

.date-picker {
  border: 1px solid rgb(189, 189, 189);
  height: fit-content;
  width: fit-content;
  border-radius: 5px;
  padding: 0px;
  overflow: hidden;
  background-color: white;
}
.empty-date .DD_MM_YYYY .cell-date-content,
.empty-date .MM_DD_YYYY .cell-date-content {
  color: rgb(189, 189, 189);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.empty-date .DD_MM_YYYY .cell-date-content::before,
.empty-date .MM_DD_YYYY .cell-date-content::before {
  color: rgb(189, 189, 189);
  font: Mulish;
}

.empty-date .DD_MM_YYYY .cell-date-content::before {
  content: 'dd/mm/yyyy';
}

.empty-date .MM_DD_YYYY .cell-date-content::before {
  content: 'mm/dd/yyyy';
}

.new-label-placeholder {
  color: grey;
  opacity: 0.8;
}

